# TKOM

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: CodeGenerator.h  JsonDeserializer.h  Logger.h  Node.h  Parser.h  Scanner.h  Source.h  SymbolTable.h  TemplateGenerator.h  Token.h  json.h  json.hpp
src/: CodeGenerator.cpp  JsonDeserializer.cpp  Logger.cpp  Node.cpp  Parser.cpp  Scanner.cpp  Source.cpp  SymbolTable.cpp  TemplateGenerator.cpp  Token.cpp  main.cpp
tests/: CMakeLists.txt  TKOMtests.cpp
